# pk

./: .gitignore  .gitmodules  AUTHORS  CLAUDE.md  Cargo.toml  Makefile.am  NEWS  README.md  TODO  autogen  config.h.in  configure.ac  configure.in  debug  index.html  params.json
.github/workflows/: release.yml
doc/: fieldx.1  fieldx.1.html  fieldx.1.ronn  pk.1  pk.1.html  pk.1.ronn
packaging/debian/: changelog  control  pk.install  rules
packaging/freebsd-ports/: Makefile  distinfo  pkg-descr
packaging/osx-brew/: pk.rb
src/: Makefile.am  command_line.c  command_line.h  compat.c  compat.h  configuration.c  configuration.h  fieldprinter.c  fieldprinter.h  frequest.c  frequest.h  helpers.c  helpers.h  main.c  main.rs  stringlist.c  stringlist.h  tokenizer.c  tokenizer.h  wrappers.c  wrappers.h
test/system/: .double_backslash.cmd.swp  .double_backslash.in.swp  .double_backslash.out.swp  all_fields.cmd  backslash.cmd  backslash.in  backslash.out  blank_line.in  blank_line.out  change_separator.cmd  change_separator.out  defaults.out  delimiter_escaped.cmd  delimiter_escaped.in  delimiter_escaped.out  different_delimiter.cmd  different_delimiter.in  different_delimiter.out  double_backslash.in  double_backslash.out  empty_fields.cmd  empty_fields.in  empty_fields.out  empty_first_field.cmd  empty_first_field.out  empty_last_field.cmd  empty_last_field.in  empty_last_field.out  empty_leading_backslash.in  empty_leading_backslash.out  empty_trailing_backslash.cmd  empty_trailing_backslash.in  empty_trailing_exclude.cmd  empty_trailing_exclude.in  empty_trailing_exclude.out  empty_trailing_trim.cmd  empty_trailing_trim.in  exclude.cmd  exclude.in  exclude_double.cmd  (+73 more)
test/unit/: Makefile  Makefile.am  command_line  command_line.c
