[package]
name = "pk"
version = "2.0.0"
edition = "2021"
description = "A field extraction utility"
license = "Apache-2.0"
repository = "https://github.com/johnmorrow/pk"

[[bin]]
name = "pk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
